Fix: Reduce top ten date header size to 5vw - 6vw casuing line break on large screens

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -300,7 +300,7 @@ header {
 }
 
 .top-ten-date-header {
-  font-size: 6vw;
+  font-size: 5vw;
   @media only screen and (max-width: 768px) {
     font-size: 10vw;
   }
